<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:background="#8BC34A"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/AppToolbarTheme" />
        </FrameLayout>

        <!-- Real content goes here -->
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#8BC34A"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="#EEE"
                    android:elevation="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/calculator_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="end|center"
                        android:lines="1"
                        android:maxLength="10"
                        android:paddingEnd="20dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="#B2B2B2"
                        android:textSize="70sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:elevation="25dp"
                        android:orientation="vertical">

                        <LinearLayout
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/number_one"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_1"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_two"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_2"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_three"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_3"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                        </LinearLayout>

                        <LinearLayout
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/number_four"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_4"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_five"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_5"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_six"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_6"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />
                        </LinearLayout>

                        <LinearLayout
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/number_seven"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_7"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_eight"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_8"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/number_nine"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_9"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />
                        </LinearLayout>

                        <LinearLayout
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/number_zero"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="buttonPressed"
                                android:text="@string/digit_0"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp" />

                            <Button
                                android:id="@+id/button_clear"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="operatorPressed"
                                android:text="@string/clr"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp"
                                android:background="#536DFE" />

                            <Button
                                android:id="@+id/button_equals"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="operatorPressed"
                                android:text="@string/eq"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp"
                                android:background="#536DFE" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#536DFE"
                        android:elevation="-20dp"
                        android:orientation="vertical"
                        android:textColor="#FFFFFF"
                        android:textSize="40sp">

                        <Button
                            android:id="@+id/button_plus"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="operatorPressed"
                            android:text="@string/op_add"
                            android:textColor="#FFFFFF"
                            android:textSize="40sp" />

                        <Button
                            android:id="@+id/button_minus"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="operatorPressed"
                            android:text="@string/op_sub"
                            android:textColor="#FFFFFF"
                            android:textSize="40sp" />

                        <Button
                            android:id="@+id/button_multiply"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="operatorPressed"
                            android:text="@string/op_mul"
                            android:textColor="#FFFFFF"
                            android:textSize="40sp" />

                        <Button
                            android:id="@+id/button_divide"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="operatorPressed"
                            android:text="@string/op_div"
                            android:textColor="#FFFFFF"
                            android:textSize="40sp" />
                        <!--<Button-->
                        <!--style="?android:attr/buttonBarButtonStyle"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="0dp"-->
                        <!--android:textColor="#FFFFFF"-->
                        <!--android:textSize="40sp"-->
                        <!--android:text="@string/power"-->
                        <!--android:id="@+id/button_power"-->
                        <!--android:layout_weight="1"-->
                        <!--android:onClick="operatorPressed"/>-->
                        <!--<Button-->
                        <!--style="?android:attr/buttonBarButtonStyle"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="0dp"-->
                        <!--android:textColor="#FFFFFF"-->
                        <!--android:textSize="40sp"-->
                        <!--android:text="√"-->
                        <!--android:id="@+id/button_root"-->
                        <!--android:layout_weight="1"-->
                        <!--android:onClick="operatorPressed"/>-->
                        <!--<Button-->
                        <!--style="?android:attr/buttonBarButtonStyle"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="0dp"-->
                        <!--android:textColor="#FFFFFF"-->
                        <!--android:textSize="40sp"-->
                        <!--android:text="| |"-->
                        <!--android:id="@+id/button_abs"-->
                        <!--android:layout_weight="1"-->
                        <!--android:onClick="operatorPressed"/>-->

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>